refactor: centralize z-index management using variables in

--- a/assets/css/_codeblock.scss
+++ b/assets/css/_codeblock.scss
@@ -64,7 +64,7 @@
       display: flex;
       gap: 0.5rem;
       align-items: center;
-      z-index: 10;
+      z-index: $z-index-content;
     }
 
     .code-action {
