--- a/assets/css/_shortcodes.scss
+++ b/assets/css/_shortcodes.scss
@@ -179,7 +179,7 @@
       font-weight: 700;
       position: sticky;
       top: 0;
-      z-index: 10;
+      z-index: $z-index-content;
     }
 
     th,
@@ -251,7 +251,7 @@
       max-width: 100% !important;
       max-height: 100% !important;
       
-      z-index: 1000;
+      z-index: $z-index-modal-overlay;
       cursor: zoom-out;
       padding: $padding-16;
     }
