--- a/layouts/_partials/post-item.html
+++ b/layouts/_partials/post-item.html
@@ -28,7 +28,7 @@
   <div class="post-content-area{{ if $coverImage }} has-cover{{ end }}">
     {{ with cond .Params.cover .Params.cover .Params.thumbnail }}
     <div class="post-cover-mobile">
-      <img src="{{ . | absURL }}" alt="Cover Image" class="post-cover-mobile-img">
+      <img src="{{ . | absURL }}" alt="Cover Image" class="post-cover-mobile-img" loading="lazy" decoding="async">
     </div>
     {{ end }}
 
@@ -54,7 +54,7 @@
 
     {{ with $coverImage }}
     <div class="post-cover">
-      <img src="{{ . | absURL }}" alt="Cover Image" class="post-cover-img">
+      <img src="{{ . | absURL }}" alt="Cover Image" class="post-cover-img" loading="lazy" decoding="async">
     </div>
     {{ end }}
   </div>
