--- a/layouts/_markup/render-image.html
+++ b/layouts/_markup/render-image.html
@@ -4,6 +4,6 @@
 {{- end -}}
 <label class="md-image" for="md-image-toggle-{{ .Ordinal }}">
   <input class="hidden toggle" type="checkbox" id="md-image-toggle-{{ .Ordinal }}" />
-  <img src="{{ $destination | safeURL }}" alt="{{ .Text }}" {{ with .Title }}title="{{ . }}"{{ end }}/>
+  <img src="{{ $destination | safeURL }}" alt="{{ .Text }}" {{ with .Title }}title="{{ . }}"{{ end }} loading="lazy" decoding="async" />
 </label>
 {{- /**/ -}}
