--- a/layouts/_partials/content/cover.html
+++ b/layouts/_partials/content/cover.html
@@ -1,5 +1,5 @@
 {{ if .Params.cover }}
 <div class="content-cover-wrap">
-  <img src="{{ .Params.cover | absURL }}" class="content-cover" alt="Cover Image">
+  <img src="{{ .Params.cover | absURL }}" class="content-cover" alt="Cover Image" decoding="async">
 </div>
 {{ end }}
