--- a/layouts/_partials/head.html
+++ b/layouts/_partials/head.html
@@ -35,6 +35,18 @@ https://github.com/minyeamer/hugo-miny
 {{- /* SEO: Schema.org JSON-LD */ -}}
 {{- partial "meta/seo/schema_json.html" . }}
 
+{{- /* Prevents menu flash by applying stored state before rendering */ -}}
+<script>
+(function() {
+  const menuBreakpoint = 256 + 768 * 1.3;
+  if (window.innerWidth > menuBreakpoint) {
+    if (localStorage.getItem('menu-expanded') === 'false') {
+      document.documentElement.classList.add('menu-initial-collapsed');
+    }
+  }
+})();
+</script>
+
 <title>{{- partial "title" . -}} | {{- .Site.Title -}}</title>
 <link rel="icon" href="{{ .Site.Params.favicon | default `favicon.png` | relURL }}" >
 
