--- a/layouts/_partials/head.html
+++ b/layouts/_partials/head.html
@@ -47,7 +47,7 @@ https://github.com/minyeamer/hugo-miny
 })();
 </script>
 
-<title>{{- partial "title" . -}} | {{- .Site.Title -}}</title>
+<title>{{- partial "title" . -}}</title>
 <link rel="icon" href="{{ .Site.Params.favicon | default `favicon.png` | relURL }}" >
 
 {{- $manifest := resources.Get "data/manifest.json" | resources.ExecuteAsTemplate "data/manifest.json" . }}
