--- a/assets/css/_defaults.scss
+++ b/assets/css/_defaults.scss
@@ -7,6 +7,7 @@ $padding-16: 1rem !default;
 $padding-20: 1.25rem !default;
 $padding-24: 1.5rem !default;
 $padding-32: 2rem !default;
+$padding-36: 2.25rem !default;
 $padding-40: 2.5rem !default;
 $padding-48: 3rem !default;
 $padding-64: 4rem !default;
@@ -35,22 +36,27 @@ $menu-width: 16rem !default;
 $toc-width: 16rem !default;
 $toc-margin-right: 3rem !default;
 
-$wide-breakpoint: $menu-width + $body-wide-width * 1.1 + $toc-width + $toc-margin-right !default;
-$toc-breakpoint: $menu-width + $body-max-width * 1.1 + $toc-width !default;
-$menu-breakpoint: $menu-width + $body-max-width * 1.3 !default;
-$narrow-breakpoint: ($body-min-width + $body-max-width) / 2 !default;
+$wide-breakpoint: ($menu-width + $body-wide-width * 1.1 + $toc-width + $toc-margin-right) !default; // 1546px
+$toc-breakpoint: ($menu-width + $body-max-width * 1.1 + $toc-width) !default; // 1357px
+$menu-breakpoint: ($menu-width + $body-max-width * 1.3) !default; // 1254px
+$body-breakpoint: ($body-max-width + 1rem) !default; // 784px
+$narrow-breakpoint: ($body-min-width + $body-max-width) / 2 !default; // 544px
 
 $toc-overlay-width: 32rem !default;
 $toc-overlay-height: 80vh !default;
 
+$search-overlay-width: 44rem !default;
+$search-overlay-height: 80vh !default;
+$search-input-width: 32rem !default;
+
 $preview-width: 200px !default;
 $preview-height: 170px !default;
-$preview-mobile-width: 160px !default;
-$preview-mobile-height: 160px !default;
+$preview-mobile-height: 200px !default;
 
 $z-index-scroll-progress: 9999 !default;
 $z-index-modal: 1001 !default;
 $z-index-modal-overlay: 1000 !default;
+$z-index-dropdown: 900 !default;
 $z-index-menu: 210 !default;
 $z-index-menu-overlay: 209 !default;
 $z-index-menu-button: 200 !default;
