--- a/assets/css/_shortcodes.scss
+++ b/assets/css/_shortcodes.scss
@@ -131,7 +131,7 @@
   }
 
   // {{< button >}}
-  a.sc-button[href] {
+  .sc-button[href] {
     display: inline-block;
     font-size: $font-size-14;
     color: var(--color-link);
@@ -198,10 +198,22 @@
   }
 
   // {{< data-table >}}
-  .data-container {
+  .sc-data-table {
     overflow-x: auto;
-    margin: 1rem 0;
     background: transparent;
+  }
+
+  .sc-data-table.overflow {
+    position: relative;
+
+    .data-table-caption {
+      display: flex;
+      justify-content: flex-end;
+    }
+
+    .data-table {
+      margin-top: $padding-8;
+    }
   }
 
   .data-table {
@@ -209,6 +221,7 @@
     border-collapse: collapse;
     font-size: 14px;
     background: transparent;
+    overflow-x: auto;
 
     thead {
       background-color: var(--data-thead-color);
@@ -239,6 +252,37 @@
 
     tbody tr:hover {
       background-color: var(--data-tbody-hover);
+    }
+
+    &:has(.data-table-caption) {
+      margin-top: 0;
+    }
+  }
+
+  .data-table-caption {
+    text-align: right;
+    margin-bottom: $padding-8;
+  }
+
+  .data-download-button {
+    display: inline-flex;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 0.32rem 0.5rem;
+    background: rgba(0, 0, 0, 0.6);
+    color: rgba(255, 255, 255, 0.9);
+    border: none;
+    border-radius: 4px;
+    font-size: $font-size-12;
+    cursor: pointer;
+    transition: opacity 0.2s;
+
+    &:hover {
+      opacity: 0.9;
+    }
+
+    i {
+      font-size: $font-size-12;
     }
   }
 
