--- a/layouts/_shortcodes/data-table.html
+++ b/layouts/_shortcodes/data-table.html
@@ -2,6 +2,8 @@
 {{- $delimiter := .Get "delimiter" | default "," -}}
 {{- $alignCenter := .Get "align-center" | default "" -}}
 {{- $class := .Get "class" -}}
+{{- $fileName := .Get "file-name" | default "" -}}
+{{- $enableDownload := .Get "enable-download" | default "true" -}}
 {{- /* --- CSV to Rows --- */ -}}
 {{- $csv := trim .Inner " \n\r\t" -}}
 {{- $lines := split $csv "\n" -}}
@@ -23,28 +25,38 @@
   {{- end -}}
 {{- end -}}
 {{- /* --- Render --- */ -}}
-<div class="data-container {{ with $class }}{{ . }}{{ end }}">
-  <table class="data-table">
-    <thead>
+<div class="sc-data-table {{ with $class }}{{ . }}{{ end }}">
+  <table class="data-table" data-filename="{{ $fileName }}">
+  {{- if and $fileName (eq $enableDownload "true") -}}
+  <caption class="data-table-caption">
+    <button class="data-download-button" 
+            data-filename="{{ $fileName }}"
+            data-delimiter="{{ $delimiter }}"
+            onclick="downloadCSV(this)">
+      <i class="fa-solid fa-download"></i> {{ $fileName }}
+    </button>
+  </caption>
+  {{- end -}}
+  <thead>
+    <tr>
+      {{- range $index, $col := $header -}}
+        {{- $colNum := add $index 1 | string -}}
+        {{- $isCenter := in $centerColumns $colNum -}}
+        <th title="{{ $col }}" {{ if $isCenter }}style="text-align: center;"{{ end }}>{{ $col | markdownify }}</th>
+      {{- end -}}
+    </tr>
+  </thead>
+  <tbody>
+    {{- range $dataRows -}}
+      {{- $rowCells := split . $delimiter -}}
       <tr>
-        {{- range $index, $col := $header -}}
+        {{- range $index, $cell := $rowCells -}}
           {{- $colNum := add $index 1 | string -}}
           {{- $isCenter := in $centerColumns $colNum -}}
-          <th title="{{ $col }}" {{ if $isCenter }}style="text-align: center;"{{ end }}>{{ $col | markdownify }}</th>
+          <td title="{{ $cell }}" {{ if $isCenter }}style="text-align: center;"{{ end }}>{{ $cell | markdownify }}</td>
         {{- end -}}
       </tr>
-    </thead>
-    <tbody>
-      {{- range $dataRows -}}
-        {{- $rowCells := split . $delimiter -}}
-        <tr>
-          {{- range $index, $cell := $rowCells -}}
-            {{- $colNum := add $index 1 | string -}}
-            {{- $isCenter := in $centerColumns $colNum -}}
-            <td title="{{ $cell }}" {{ if $isCenter }}style="text-align: center;"{{ end }}>{{ $cell | markdownify }}</td>
-          {{- end -}}
-        </tr>
-      {{- end -}}
-    </tbody>
-  </table>
+    {{- end -}}
+  </tbody>
+</table>
 </div>
